# flaskbot

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
flaskbot/: __init__.py  admin.py  analytics.py  bot.py  database.db  other.py
flaskbot/static/: file.css
flaskbot/templates/: autorization.html
flaskbot/templates/admin/: analytics_index.html  index.html
tests/: test_flaskbot.py
